Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13211

right-arrows in menus drawn too large (e.g. in UltraISO 9.6.6.3300 from rapps)

    XMLWordPrintable

Details

    Description

      ros 0.4.5RC2

      UltraISO 9.6.6.3300
      the arrows towards right within the expanded menus are drawn wrong (a bit too large)

      Observed result
      045RC2-arrowsTowardsRight.png

      Expected result
      xpsp3_uiso9_6_6_3300.png

      Attachments

        1. 0.4.11-RC-29-g97ab52a__xpMarlett_looksTheSame.png
          0.4.11-RC-29-g97ab52a__xpMarlett_looksTheSame.png
          38 kB
        2. 0.4.12-RC-49-gd52cac4_stillOk.png
          0.4.12-RC-49-gd52cac4_stillOk.png
          47 kB
        3. 0.4.13-dev-700-gf9b494e_stillAffected.png
          0.4.13-dev-700-gf9b494e_stillAffected.png
          34 kB
        4. 045RC2-arrowsTowardsRight.png
          045RC2-arrowsTowardsRight.png
          35 kB
        5. Abiword_Menu_OK.png
          Abiword_Menu_OK.png
          40 kB
        6. Abiword2_6_8.png
          Abiword2_6_8.png
          36 kB
        7. Aiword_OK_Highlight.png
          Aiword_OK_Highlight.png
          77 kB
        8. Aiword_OK_No_Highlight.png
          Aiword_OK_No_Highlight.png
          78 kB
        9. Audacity2_2_2.png
          Audacity2_2_2.png
          46 kB
        10. CheckRadio.zip
          6 kB
        11. ff28_UltraISO_draw_c.patch
          2 kB
        12. ff28_UltraISO_draw_c.patch
          1.0 kB
        13. freestopwatch.png
          freestopwatch.png
          26 kB
        14. freestopwatch-checkmark-is-black-box.png
          freestopwatch-checkmark-is-black-box.png
          36 kB
        15. Freetype_Force_Center_Alignment.txt
          0.5 kB
        16. gotcha.png
          gotcha.png
          32 kB
        17. menu-arrow.patch
          3 kB
        18. MenuArrow.zip
          6 kB
        19. MenuArrow.zip
          6 kB
        20. menu-arrow2.patch
          3 kB
        21. MenuArrow2.zip
          7 kB
        22. MenuArrow2.zip
          7 kB
        23. menu-arrow3.patch
          3 kB
        24. MenuArrow-ros.png
          MenuArrow-ros.png
          23 kB
        25. MenuArrow-ros-after.png
          MenuArrow-ros-after.png
          22 kB
        26. peazip.png
          peazip.png
          29 kB
        27. PSPAD5_0_0.png
          PSPAD5_0_0.png
          22 kB
        28. ROS_UltraISO_Menu_CenterAlignMarlett.bmp
          ROS_UltraISO_Menu_CenterAlignMarlett.bmp
          3.91 MB
        29. Small_Arrows80percent.png
          Small_Arrows80percent.png
          42 kB
        30. UltraISO_Arrows_OK.png
          UltraISO_Arrows_OK.png
          46 kB
        31. UltraISO_Menu_OK.png
          UltraISO_Menu_OK.png
          29 kB
        32. UltraISO.png
          UltraISO.png
          35 kB
        33. ultraiso-menu-position-wrong.png
          ultraiso-menu-position-wrong.png
          29 kB
        34. xpsp3_uiso9_6_6_3300.png
          xpsp3_uiso9_6_6_3300.png
          42 kB

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              reactosfanboy reactosfanboy
              Votes:
              4 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: